# SlicerSoundControl

./: CMakeLists.txt  README.md  SoundControl.xcf
OpenSoundControl/: CMakeLists.txt  OpenSoundControl.py
OpenSoundControl/OSC/: __init__.py
OpenSoundControl/Resources/: OscSimpleTest.pd
SoundNav/: CMakeLists.txt  SoundNav.py
SoundNav/Resources/: BreachWarningScene.mrb
